# london-property-explorer

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  agent.md  progress.md  pyproject.toml  render.yaml  schema.js  tasks.json
.github/workflows/: ci.yml  keep-alive.yml  live-evals.yml
.playwright-mcp/: page-2026-06-14T22-48-18-091Z.yml
api/: __init__.py
api/app/: __init__.py  main.py  models.py
api/app/ai/: __init__.py  contracts.py  cost.py  factory.py  graph.py  grounding.py  model.py  redaction.py  state.py  tracing.py
api/app/api/: dependencies.py
api/app/core/: config.py  errors.py  (+3 more)
api/tests/: conftest.py  test_ai.py  test_api.py  test_binary.py  test_contract.py  test_evaluation.py  test_live_ai.py  test_repository.py  test_retrieval_ingest.py  test_sqlite_repository.py
docs/: AGENTIC_AI.md  BACKEND_REQUIREMENTS.md  DATABASE_REQUIREMENTS.md  DATA_MODEL.md  FRONTEND_VIEWS.md  FUNCTIONAL_REQUIREMENTS.md  PRD.md  QA_TEST_SPEC.md  SOURCE_DATA_PROFILE.md  SYSTEM_DESIGN.md  UI_UX.md  openapi.yaml
evals/: __init__.py
evals/baselines/: release-v1.json
evals/datasets/: routes-v1.jsonl
evals/evaluators/: __init__.py  quality.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: explorer.spec.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
knowledge/: sources.yaml
pipeline/: __init__.py  schema.sql
pipeline/lpe_pipeline/: __init__.py  build.py  cli.py  districts.py  models.py  postcodes.py
pipeline/tests/: test_build.py  test_districts.py  test_postcodes.py
scripts/: build_local_sqlite.py  export_openapi.py  load_database.py  load_database.sh  measure.sh  promote_eval_case.py  smoke.sh
(+31 files in other folders)
