[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "london-property-explorer"
version = "0.1.0"
description = "Viewport-bounded London property explorer with a grounded agentic AI layer."
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.52,<1",
  "asyncpg>=0.30,<1",
  "beautifulsoup4>=4.13,<5",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langchain>=1.0,<2",
  "langchain-anthropic>=0.3,<2",
  "langchain-openai>=1.0,<2",
  "langchain-pinecone>=0.2,<2",
  "langgraph>=1.0,<2",
  "langsmith>=0.3,<1",
  "pinecone>=7,<9",
  "pydantic-settings>=2.8,<3",
  "pyyaml>=6,<7",
  "sse-starlette>=2.2,<4",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
dev = [
  "asyncpg-stubs>=0.31,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
  "types-PyYAML>=6.0.12,<7"
]

[project.scripts]
lpe-pipeline = "pipeline.lpe_pipeline.cli:main"
lpe-knowledge = "api.app.ai.retrieval.ingest:main"
lpe-eval = "api.app.ai.evaluation.run:main"

[tool.hatch.build.targets.wheel]
packages = ["api", "pipeline", "evals"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["api/tests", "pipeline/tests"]
markers = [
  "integration: requires a running PostGIS database",
  "live_ai: requires Anthropic, Pinecone, and LangSmith credentials"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["frontend"]
